@@ -6,6 +6,7 @@
 #include <stdio.h>
 #include <fcntl.h>
 #include <poll.h>
+#include <unistd.h>
 
 int
 main()
